--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <script src="word_generator.js" defer></script>
     <script src="script.js" defer></script>
+    <script src="spawn_letters.js" defer></script>
 
     <div id="Main">
         <div id="input_div">
@@ -14,6 +15,7 @@
             <button id="submit"></button>
         </div>
         <div id="words"></div>
+        <div id="letters"></div>
     </div>
 </body>
 </html>
